--- a/src/stories/flexi-modal/index.css
+++ b/src/stories/flexi-modal/index.css
@@ -9,17 +9,18 @@
   pointer-events: none;
 }
 
-.flexi-empty {
+/* .flexi-empty {
   min-width: 500px;
   min-height: 300px;
   background-color: #ccc;
-}
+} */
 
 .flexi-container {
   position: absolute;
   z-index: 1;
   min-width: 500px;
   pointer-events: auto;
+  background-color: #ccc;
 }
 
 .flexi-container header {
